# nrk-subtitles

./: Makefile  docker-compose.yml  pyproject.toml  requirements.txt
docker/fastapi/: Dockerfile  install-deps.sh
