[project]
name = "subtitles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4==4.9.3",
    "certifi==2020.11.8",
    "chardet==3.0.4",
    "click==7.1.2",
    "debugpy==1.2.0",
    "docopt==0.6.2",
    "fastapi==0.61.2",
    "gunicorn==20.0.4",
    "h11==0.11.0",
    "html5lib==1.1",
    "httptools==0.1.1",
    "idna==2.10",
    "pydantic==1.7.2",
    "requests-cache==0.5.2",
    "requests==2.25.0",
    "setuptools==75.3.0",
    "six==1.15.0",
    "soupsieve==2.0.1",
    "starlette==0.13.6",
    "urllib3==1.26.2",
    "uvicorn==0.12.2",
    "uvloop==0.14.0",
    "webencodings==0.5.1",
    "webvtt-py==0.4.6",
]

[dependency-groups]
dev = [
    "black>=21.12b0",
    "isort>=6.0.0b2",
    "mypy>=1.14.1",
    "pylint>=2.3.0",
    "pytest>=8.3.4",
    "rope>=1.1.1",
]
